# HW2-ICPC-Management-System-2022

./: .gitignore  CMakeLists.txt  build.sh  intro.md  test.out  test.sh
.cache/clangd/index/: ICPC.cc.3C56FC6B5BB05DB8.idx  ICPC.cc.EE01A4F393221C30.idx  ICPC.h.83A7D70A4E143244.idx  ICPC.h.A18DE628E785A7D6.idx  ICPC.h.D6A31520E3299A29.idx  data.cc.0BE1510F80EF09C7.idx  data.cc.5B4BDC612F5EAF80.idx  data.h.42F739A414441097.idx  data.h.4B3BC5877E8786AF.idx  data.h.EAB2BB8B934C9231.idx  main.cpp.0ACAC7B0F0E1CB14.idx  main.cpp.3F12687AB2152942.idx  main.cpp.991C59EA027F41AE.idx  resource.h.11BC5F23BE7E812F.idx  resource.h.8A5A89434158B73B.idx  resource.h.C04EA7146180675B.idx
data/: 7.in
doc/: complexity.tex  structure.drawio
docs/: intro.md
include/: ICPC.h  data.h  input.h  operator.h  resource.h  team.h  test.cpp
include/ICPC/: ICPC.h  data.h
src/: CMakeLists.txt  ICPC.cc  data.cc  input.cc  main.cpp  team.cc
src_origin/: data.cc  input.cc  operator.cc
